<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#160D39"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="@dimen/_15sdp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@drawable/ic_frame_3708">

    <TextView
        android:id="@+id/name_video_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_18sdp"
        android:text="Ten Thu Muc"
        android:textStyle="bold"
        android:textColor="#6AB7CE"/>
    <ImageView
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_rectangle_8"
        android:layout_marginTop="@dimen/_10sdp"/>

    <LinearLayout
        android:id="@+id/play_video_item_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_play_circle_outline"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:textSize="@dimen/_15sdp"
            android:textColor="#353945"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_thin"
            android:layout_marginStart="@dimen/_15sdp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_to_playlist_item_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_music_playlist"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_playlist"
            android:textSize="@dimen/_15sdp"
            android:textColor="#353945"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_thin"
            android:layout_marginStart="@dimen/_15sdp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_lock_item_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_lock_outline__black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock_in_private_folder"
            android:textSize="@dimen/_15sdp"
            android:textColor="#353945"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_thin"
            android:layout_marginStart="@dimen/_15sdp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/delete_item_video_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_trash"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="@dimen/_15sdp"
            android:textColor="#353945"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_thin"
            android:layout_marginStart="@dimen/_15sdp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rename_item_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_edit"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rename"
            android:textSize="@dimen/_15sdp"
            android:textColor="#353945"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_thin"
            android:layout_marginStart="@dimen/_15sdp"/>
    </LinearLayout>

    </LinearLayout>

</LinearLayout>