<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_playing"
    tools:context=".activity.EditSongActivity">

    <ImageView
        android:id="@+id/imvBack"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:contentDescription="imvBack"
        android:paddingHorizontal="@dimen/_10sdp"
        android:src="@drawable/ic_arrow_back_ios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:gravity="center|start"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toStartOf="@id/tvSelect"
        app:layout_constraintStart_toEndOf="@id/imvBack"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSelect"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:fontFamily="@font/nunito_normal"
        android:gravity="center"
        android:text="@string/select_all"
        android:textColor="@color/color_text"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toStartOf="@id/imvCheck"
        app:layout_constraintStart_toEndOf="@id/tvCount"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imvCheck"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:paddingHorizontal="@dimen/_10sdp"
        android:src="@drawable/ic_check_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvSelect"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvSongs"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/linearControl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCount" />

    <LinearLayout
        android:id="@+id/linearControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_category"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_20sdp"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rcvSongs">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_add_square" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_normal"
                android:maxLines="2"
                android:text="@string/add_play_list"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_trash" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_normal"
                android:maxLines="2"
                android:text="@string/delete"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_heart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_normal"
                android:maxLines="2"
                android:text="@string/add_favorite"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/ic_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_normal"
                android:maxLines="2"
                android:text="@string/share"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>