<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#160D39"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/ic_frame_3708"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <TextView
            android:id="@+id/name_video_main_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_normal"
            android:text="Ten video"
            android:textColor="#6AB7CE"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/ic_rectangle_8" />

        <LinearLayout
            android:id="@+id/play_video_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/ic_play_circle_outline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/nunito_normal"
                android:text="Play video next"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_to_playlist_item_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/ic_music_playlist" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/nunito_normal"
                android:text="@string/add_to_playlist"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/set_rename_item_video_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/ic_edit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/nunito_normal"
                android:text="Rename video"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/private_folder_item_video_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/ic_lock_outline__black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/nunito_normal"
                android:text="Private Video"
                android:textColor="#353945"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/delete_item_video_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/ic_trash" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/nunito_normal"
                android:text="Delete"
                android:textColor="#353945"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/favourite_item_video_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/ic_heart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/nunito_normal"
                android:text="@string/favourite"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_item_video_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/ic_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/nunito_normal"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
